--- a/css/style.css
+++ b/css/style.css
@@ -77,6 +77,7 @@ body {
 .header {
 	box-shadow: 2px 0 7px 0.1px #000;
 	background-color: #245a7a;
+	border-radius: 0 0 90px 90px;
 }
 
 .header:hover {
@@ -115,12 +116,12 @@ body {
 	text-transform: uppercase;
 	font-weight: 700;
 	text-shadow: 0.5px 0.5px 0.5px #000;
-	/* font-family: "open sans"; */
+	/* font-family: "open sans condensed"; */
 }
 
 .menu__link:hover {
 	background-color: #992667;
-	border-radius: 5px;
+	border-radius: 0 10px 0 10px;
 	box-shadow: 2px 0 7px 0.1px #000;
 	/* не использую цвет в outline потомучто будет не красиво :(  */
 	outline: 1px dashed transporent;
@@ -165,7 +166,7 @@ h1 {
 	background-color: #245a7a;
 	color: #fff;
 	padding: 30px;
-	border-radius: 50px 50px 0 0;
+	border-radius: 0 90px 0 90px;
 	font-weight: 300;
 	margin: 0 0 20px 0;
 	box-shadow: 2px 2px 7px 0.8px #000;
@@ -198,6 +199,7 @@ h1 {
 	margin: 0 auto 20px auto;
 	box-shadow: 2px 2px 7px 0.8px #000;
 	text-shadow: 1px 1px 1px #000;
+	border-radius: 0 90px 0 90px;
 }
 
 .history .title {
@@ -222,6 +224,7 @@ h1 {
 	margin: 0 0 20px 0;
 	box-shadow: 2px 2px 7px 0.8px #000;
 	text-shadow: 1px 1px 1px #000;
+	border-radius: 0 90px 0 90px;
 }
 
 .modern img {
@@ -246,7 +249,7 @@ h1 {
 	font-size: 16px;
 	box-shadow: 2px 2px 7px 0.8px #000;
 	display: inline-block;
-	border-radius: 0 0 0 50px;
+	border-radius: 0 90px 0 90px;
 	text-shadow: 1px 1px 1px #000;
 	min-height: 660px;
 	overflow: hidden;
@@ -264,7 +267,7 @@ h1 {
 	font-size: 16px;
 	box-shadow: 2px 2px 7px 0.8px #000;
 	display: inline-block;
-	border-radius: 0 0 50px 0;
+	border-radius: 0 90px 0 90px;
 	text-shadow: 1px 1px 1px #000;
 	min-height: 660px;
 	overflow: hidden;
@@ -285,6 +288,7 @@ h1 {
 .footer {
 	box-shadow: 2px 0 7px 0.1px #000;
 	background-color: #245a7a;
+	border-radius: 90px 90px 0 0;
 }
 
 .footer:hover {
